# igc-public-mirror

./: .edit_ta_last  .gitignore  .left  README.md  edit_ta  edit_ta.20251107_060747.bak  edit_ta.bak_20251107_122400  edit_ta.bak_20251107_123115  edit_ta.bak_20251107_131439  edit_ta.bak_20251107_134232  edit_ta.bak_20251107_134530  edit_ta.bak_20251107_142117  edit_ta.bak_20251107_142510  edit_ta.bak_20251107_143941  edit_ta.bak_20251107_144706  edit_ta.bak_add_empty_check_20251107_071950  edit_ta.bak_fix_ts_20251107_082708  edit_ta.bak_fix_ts_move_20251107_083040  edit_ta.bak_fullrewrite_20251107_084221  edit_ta.bak_fullrewrite_20251107_085552  edit_ta.bak_header_20251107_103137  edit_ta.bak_tidy_20251107_095949  edit_ta.bak_ts_rb_20251107_075740  edit_ta.bak_ts_rb_20251107_080353  edit_ta.bak_ts_rb_20251107_081024  edit_ta.bak_ts_rb_20251107_081433  edit_ta.transaction_bak  edit_ta.transaction_bak_bootstrap  edit_ta.transaction_bak_fix_quotes  igc.sql  pyproject.toml  rollback_ta
.github/workflows/: mirror.yml
backups_20251031_070013/: core.py  entry.py  sim.py  vars.py
igc/: __init__.py
igc.egg-info/: PKG-INFO  SOURCES.txt
igc/common/: paths.py  (+2 more)
patches/: 0002-simpicker-more-fields.patch  0003-web-simpicker-browse.patch
scripts/: metric_collapse_mask_fs.py  sim_one_frame.py  sim_run_pp0.py  snapshot_env.sh  snapshot_onefile.sh
system_snapshots/: system_report_2025-11-02_070710.md  system_report_2025-11-02_070850.md  system_report_2025-11-02_071205.md  system_report_2025-11-05_010808.md  system_report_2025-11-13_074707.md  system_report_2025-11-22_074536.md
(+169 files in other folders)
